# DSCI_524_group_9

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  testing.ipynb
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pygtracker.rst
pygtracker/: pygtracker.py
tests/: test_pygtracker.py
