[tool.poetry]
name = "pygtracker"
version = "0.1.0"
description = "This is a python package for mds grade tracking and management."
authors = ["Javairia Raza, Jianru Deng, Tran Doan Khanh Vu, Yanhua Chen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
