[tool.poetry]
name = "pygtracker"
version = "0.1.1"
description = "This is a python package for mds grade tracking and management."
authors = ["Javairia Raza, Jianru Deng, Tran Doan Khanh Vu, Yanhua Chen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pygtracker/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
